// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`SideNavMenuItem rendering renders expected elements 1`] = `
<li
  className="TestClass"
>
  <a
    aria-current={null}
    className="SideNav__link"
    tabIndex={-1}
  >
    <span
      className="SideNav__text"
      title="child"
    >
      child
    </span>
  </a>
</li>
`;

exports[`SideNavMenuItem rendering renders expected elements when boolean properties are set 1`] = `
<li>
  <a
    aria-current="page"
    className="SideNav__link"
    tabIndex={0}
  >
    <span
      className="SideNav__text SideNav__text--shortcut"
      title="child"
    >
      child
    </span>
  </a>
</li>
`;

exports[`SideNavMenuItem rendering renders expected elements when children is not a string 1`] = `
<li
  className="TestClass"
>
  <a
    aria-current={null}
    className="SideNav__link"
    tabIndex={-1}
  >
    <span
      className="SideNav__text"
    >
      <span />
    </span>
  </a>
</li>
`;
